--- a/Client/package.json
+++ b/Client/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.3.0",
+    "@ant-design/icons": "^5.3.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.26",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.21",
     "antd": "^4.9.4",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
+    "js-cookie": "^3.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
@@ -18,7 +23,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^8.8.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.4",
+    "styled-components": "^6.1.8",
+    "typescript": "^5.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +48,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "http://localhost:8000",
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/react-redux": "^7.1.33"
+  }
 }
