--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Nhatloi",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "cloudinary": "^1.23.0",
@@ -29,10 +30,12 @@
     "googleapis": "^66.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "mongodb": "^6.5.0",
     "mongoose": "^5.11.8",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.17",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
